--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -9,7 +9,10 @@
   <title>量子互联网络科技</title>
   <link rel="icon" href="img/logo.png" type="image/x-icon"/>
   <style>
-      html, body, #app {height: 100%;background-image: url(img/main.png)}
+      html, body, #app {
+          height: 100%;
+          background-image: url(http://pq210ixv4.bkt.clouddn.com/main.png)
+      }
   </style>
 </head>
 <body>
