--- a/index.html
+++ b/index.html
@@ -4,20 +4,29 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="format-detection" content="telephone=no">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width">
   <meta content="telephone=no" name="format-detection">
   <title>量子互联网络科技</title>
   <link rel="icon" href="img/logo.png" type="image/x-icon"/>
   <style>
       html, body, #app {
-          height: 100%;
-          background-image: url(http://pq210ixv4.bkt.clouddn.com/main.png)
+          margin:0px;
+          padding:0px
       }
   </style>
 </head>
 <body>
   <div id="app">
-   
+   <img style="width:100%;" src="http://pq210ixv4.bkt.clouddn.com/main.png" />
   </div>
 </body>
 </html>
+
+<script>
+function click(){
+　　if(event.button==2){
+　　　　alert( '量子互联网络科技，服务热线：15071076841');
+　　}
+}
+document.onmousedown=click
+</script>
