--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div id="app">
-   <img style="width:100%;" src="http://pq210ixv4.bkt.clouddn.com/main.png" />
+   <img style="width:100%;height:100vh" src="http://pq210ixv4.bkt.clouddn.com/main.png" />
   </div>
 </body>
 </html>
